# TestingPlatform

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  db.sqlite3  entrypoint.sh  manage.py  package-lock.json  package.json  poetry.lock~c444fafcf09ff4a382c465d9354691f9f3329f49  pyproject.toml  requirements.in  requirements.txt  test.html
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: django.yml  pre-commit.yaml  pythonapp.yml
api/: serializers.py  urls.py  validators.py  views.py
authentication/: admin.py  forms.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_auto_20211028_0851.py  0003_alter_user_vat_number.py  0004_removed_subscription_mechanism.py  0005_user_ldih_uuid.py  0006_enforce_unique_email.py
authentication/templates/: add_domain.html  change_password.html  login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  signup.html  sub_presentation.html  subscription_request.html  subscriptions.html
automation/: admin.py  forms.py  helpers.py  models.py  tasks.py  urls.py  views.py
automation/migrations/: 0001_initial.py  0002_whoisautomatedtest.py  0003_removed_subscription_mechanism.py
automation/templates/: automated_ping_report.html  automated_whois_report.html  automation_index.html  automation_request.html  http_report.html
c3_protocols/: apps.py  urls.py  views.py
c3_protocols/templates/: c3_protocols.html
checks/: __init__.py  admin.py  apps.py  models.py  probes.py  scoring.py
checks/tasks/: __init__.py  mail.py
compose/staging/: .env.example
contact/: forms.py  urls.py  views.py
contact/templates/: contact.html  success.html
contrib/: update.sh
db/: tls-parameters.csv
dmarc-collector/: dmarc-collector
docs/: api-v1.rst  architecture.rst  checks.rst  conf.py  index.rst  installation.rst  requirements.txt
docs/_static/: architecture-platform.odg  openapi.yml
iot_inspector/: admin.py  apps.py  forms.py  helpers.py  helpers_old.py  models.py  urls.py  views.py
iot_inspector/migrations/: 0001_initial.py  0002_iotuser_login.py
iot_inspector/templates/: iot_index.html  iot_request.html
knowledge_base/: apps.py  urls.py  views.py
knowledge_base/templates/: kb.html
landing_page/: apps.py  mail.py  tools.py  urls.py  views.py
landing_page/templates/: about.html  dashboard.html  index.html  landing_page.html  ldih_landing.html
legal_section/: apps.py  urls.py  views.py
legal_section/templates/: privacy.html  tos.html
onekey/: admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py
onekey/migrations/: 0001_initial.py
onekey/templates/: iot_request.html  onekey_index.html  onekey_request.html
specialized_testing/: apps.py  urls.py  views.py
specialized_testing/templates/: specialized_landing.html
static/css/: style.css
static_global/css/: nc3.css  style.css
static_global/js/: chartTest.js  collapsibleAnimation.js  nav.js
static_global/pdf/: .~lock.NC3_Testing Platform_Terms of Service_Clean_revRP.docx#  NC3_Testing Platform_Terms of Service_Clean_revRP.docx  NC3_Testing Platform_Terms of Service_Track Change_revRP.docx
templates/: 404.html  500.html  base.html  footer.html  human.txt  nav.html  robots.txt  security.txt
testing/: admin.py  apps.py  cipher_scoring.py  ciphers_info.py  forms.py  helpers.py  models.py  test_ipv6.py  urls.py  validators.py  views.py  zap.py
testing/api/: serializers.py  urls.py  views.py
testing/migrations/: 0001_initial.py  0002_tlsscanhistory.py  0003_alter_dmarcrecord_domain.py  0004_testreport.py  0005_unique_domain_constraints.py
testing/templates/: all_tests.html  c3_protocols.html  check_email.html  check_file.html  check_infra.html  check_ipv6.html  check_lookyloo.html  check_services.html  check_web_server.html  check_webapp.html  check_website.html  check_zap.html  dmarc_generator.html  dmarc_reporter.html  dmarc_shower.html  email-test_report.html  email_policy_generator.html  infra-test_report.html  macvendor.html  pdf_wrapper.html  ping_test.html  spf_generator.html  test.json  test_landing.html  web-test_report.bkp.html  web-test_report.html  web_report.html  whois_lookup.html  whois_report.html  zap_pdf_wrapper.html  zap_report.html
testing/templatetags/: tags.py  timestamp_to_time.py
testing_platform/: asgi.py  celery.py  context_processors.py  decorators.py  settings.py  tools.py  urls.py  wsgi.py
