[tool.poetry]
name = "testing-platform"
version = "0.1.0"
description = ""
authors = ["Romain Kieffer"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "testing_platform"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.0.7"
django-bootstrap5 = "^22.1"
django-icons = "^22.1"
django-widget-tweaks = ">=1.4.8,<1.5.0"
django-q = ">=1.3.9,<1.4.0"
python-decouple = ">=3.5,<4.0"
iot-inspector-client = "^1.2.1"
dj-database-url = ">=0.5.0,<0.6.0"
requests = ">=2.26.0,<2.27.0"
certifi = ">=2021.5.30,<2021.6.0"
pyjwt = ">=2.2.0,<2.5.0"
sgqlc = ">=14.1,<15.0"
croniter = ">=1.0.15,<1.1.0"
imap-tools = "^0.57.0"
xmltodict = "^0.13.0"
checkdmarc = "^4.4.5"
ipwhois = "^1.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
black = "^22.10.0"
pyupgrade = "^3.2.2"
reorder-python-imports = "^3.9.0"
autoflake = "^1.7.7"
sphinx-book-theme = "^0.3.2"
sphinx-multiversion = "^0.2.4"
sphinx-autodoc-typehints = "^1.18.3"
sphinxcontrib-mermaid = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
