[tool.poetry]
name = "testing-platform"
version = "0.1.0"
description = "NC3 Testing Platform"
authors = [
    "Romain Kieffer <romain.kieffer@nc3.lu>",
    "Philippe Parage <philippe.parage@nc3.lu>",
    "Cédric Bonhomme <cedric@cedricbonhomme.org>",
]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "testing_platform"}]

homepage = "https://github.com/NC3-LU/TestingPlatform"
repository = "https://github.com/NC3-LU/TestingPlatform"
documentation = "https://testingplatform.readthedocs.io"

keywords = ["test", "security", "internet-standard"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = "^4.1.7"
django-bootstrap5 = "^22.1"
django-icons = "^22.1"
django-widget-tweaks = ">=1.4.8,<1.5.0"
django-q = ">=1.3.9,<1.4.0"
python-decouple = ">=3.5,<4.0"
dj-database-url = ">=0.5.0,<0.6.0"
requests = "^2.28.2"
pyjwt = ">=2.2.0,<2.5.0"
sgqlc = ">=14.1,<15.0"
croniter = ">=1.0.15,<1.1.0"
imap-tools = "^0.57.0"
xmltodict = "^0.13.0"
ipwhois = "^1.2.0"
onekey-client = "^2.0.2"
psutil = "^5.9.4"
certifi = "^2023.7.22"
django-enumfields = "^2.1.1"
pypandora = "^1.4.0"
checkdmarc = "^4.5.2"
python3-nmap = "^1.6.0"
python-owasp-zap-v2-4 = "^0.0.21"
pycryptodome = "^3.18.0"
pandas = "^2.0.2"
djangorestframework = "^3.14.0"
drf-spectacular = "^0.26.4"
drf-spectacular-sidecar = "^2023.7.1"
django-extensions = "^3.2.3"
weasyprint = "^60.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^3.3.1"
black = "^22.10.0"
pyupgrade = "^3.2.2"
autoflake = "^1.7.7"
mypy = "^0.991"
types-requests = "^2.28.11.5"
pip-audit = "^2.5.5"
isort = "^5.12.0"
django-extensions = "^3.2.3"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-book-theme = "^1.0.1"
sphinx-multiversion = "^0.2.4"
sphinx-autodoc-typehints = "^1.20.1"
sphinxcontrib-mermaid = "^0.7.1"
sphinxcontrib-bibtex = "^2.5.0"
sphinxcontrib-openapi = "^0.8.1"
pydot = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "migrations|docs"

[tool.isort]
profile = "black"
